--- a/frontend/src/components/Listings/ListingPage/ListingPage.css
+++ b/frontend/src/components/Listings/ListingPage/ListingPage.css
@@ -262,3 +262,11 @@
         margin-top: 50px;
     }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+
+    .listingPageImage {
+        height: 400px;
+    }
+
+}
